--- a/Astronomy in OBJC/Astronomy in OBJC/Base.lproj/Main.storyboard
+++ b/Astronomy in OBJC/Astronomy in OBJC/Base.lproj/Main.storyboard
@@ -16,34 +16,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cSy-ZE-fDl">
-                            <size key="itemSize" width="128" height="128"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cSy-ZE-fDl">
+                            <size key="itemSize" width="180" height="180"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RoverPicsCell" id="mDx-v2-pSY" customClass="RoverCollectionViewCell">
-                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="HTN-uM-Bhe">
-                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="F4W-2V-5J1">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="F4W-2V-5J1">
+                                            <rect key="frame" x="10" y="10" width="180" height="180"/>
                                         </imageView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="F4W-2V-5J1" secondAttribute="bottom" id="LLg-Kj-xqA"/>
-                                        <constraint firstItem="F4W-2V-5J1" firstAttribute="leading" secondItem="HTN-uM-Bhe" secondAttribute="leading" id="RBq-j3-jKe"/>
-                                        <constraint firstAttribute="trailing" secondItem="F4W-2V-5J1" secondAttribute="trailing" id="guh-ZL-FL5"/>
-                                        <constraint firstItem="F4W-2V-5J1" firstAttribute="top" secondItem="HTN-uM-Bhe" secondAttribute="top" id="ihX-re-plV"/>
+                                        <constraint firstItem="F4W-2V-5J1" firstAttribute="leading" secondItem="HTN-uM-Bhe" secondAttribute="leading" constant="10" id="0gQ-vN-3BY"/>
+                                        <constraint firstItem="F4W-2V-5J1" firstAttribute="top" secondItem="HTN-uM-Bhe" secondAttribute="top" constant="10" id="BZg-t4-rVZ"/>
+                                        <constraint firstAttribute="bottom" secondItem="F4W-2V-5J1" secondAttribute="bottom" constant="10" id="PtN-50-xj3"/>
+                                        <constraint firstAttribute="trailing" secondItem="F4W-2V-5J1" secondAttribute="trailing" constant="10" id="ib1-mb-vjQ"/>
                                     </constraints>
                                 </collectionViewCellContentView>
+                                <size key="customSize" width="200" height="200"/>
                                 <connections>
                                     <outlet property="imageView" destination="F4W-2V-5J1" id="vvM-Xa-SXi"/>
-                                    <segue destination="BYZ-38-t0r" kind="show" id="voX-p0-pt7"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="DetailViewSegue" id="voX-p0-pt7"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
