--- a/Astronomy-ObjcSwift/Astronomy-ObjcSwift/Base.lproj/Main.storyboard
+++ b/Astronomy-ObjcSwift/Astronomy-ObjcSwift/Base.lproj/Main.storyboard
@@ -23,26 +23,35 @@
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="F6g-EB-So6" customClass="PhotoCollectionViewCell" customModule="Astronomy_ObjcSwift" customModuleProvider="target">
-                                <rect key="frame" x="10" y="10" width="128" height="128"/>
+                                <rect key="frame" x="10" y="10" width="160" height="160"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="CA9-Tc-k0f">
-                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="160" height="160"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qcs-Pn-XTT">
-                                            <rect key="frame" x="43" y="53.5" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="a9X-zH-kJo">
+                                            <rect key="frame" x="61.5" y="61.5" width="37" height="37"/>
+                                        </activityIndicatorView>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nUH-Mc-vSM">
+                                            <rect key="frame" x="0.0" y="0.0" width="160" height="160"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="160" id="IPd-S5-apM"/>
+                                                <constraint firstAttribute="width" secondItem="nUH-Mc-vSM" secondAttribute="height" multiplier="1:1" id="yoT-S8-kSe"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="Qcs-Pn-XTT" firstAttribute="centerY" secondItem="CA9-Tc-k0f" secondAttribute="centerY" id="i5m-BB-pkD"/>
-                                        <constraint firstItem="Qcs-Pn-XTT" firstAttribute="centerX" secondItem="CA9-Tc-k0f" secondAttribute="centerX" id="scO-tN-diy"/>
+                                        <constraint firstAttribute="bottom" secondItem="nUH-Mc-vSM" secondAttribute="bottom" id="C67-Bd-4Nx"/>
+                                        <constraint firstItem="a9X-zH-kJo" firstAttribute="centerX" secondItem="CA9-Tc-k0f" secondAttribute="centerX" id="GmM-9N-RpU"/>
+                                        <constraint firstAttribute="trailing" secondItem="nUH-Mc-vSM" secondAttribute="trailing" id="PAx-eu-JY2"/>
+                                        <constraint firstItem="a9X-zH-kJo" firstAttribute="centerY" secondItem="CA9-Tc-k0f" secondAttribute="centerY" id="cOu-09-5cv"/>
+                                        <constraint firstItem="nUH-Mc-vSM" firstAttribute="top" secondItem="CA9-Tc-k0f" secondAttribute="top" id="hw4-Cy-7Tj"/>
+                                        <constraint firstItem="nUH-Mc-vSM" firstAttribute="leading" secondItem="CA9-Tc-k0f" secondAttribute="leading" id="jSV-LX-Ouy"/>
                                     </constraints>
                                 </collectionViewCellContentView>
                                 <connections>
-                                    <outlet property="tempLabel" destination="Qcs-Pn-XTT" id="Dw4-dB-8RP"/>
+                                    <outlet property="activityIndicator" destination="a9X-zH-kJo" id="0aU-YN-N2N"/>
+                                    <outlet property="imageView" destination="nUH-Mc-vSM" id="wWA-mQ-dKa"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
